tests/lean/implementedByIssue.lean.expected.out
implementedByIssue.lean:15:11-15:31: error: Invalid `implemented_by` argument `Hidden.get_2`: `Hidden.get_2` has 0 universe level parameter(s), but `Array.data` has 1
implementedByIssue.lean:19:11-19:31: error: Invalid `implemented_by` argument `Hidden.get_3`: `Hidden.get_3` has type
  {α : Type u} → {n : Nat} → Fin n → Array α n → α
but `Array.data` has type
  {α : Type u} → {n : Nat} → Array α n → Fin n → α
